--- a/tex/Q2_Inpatiant_AverageStay_Lenght.tex
+++ b/tex/Q2_Inpatiant_AverageStay_Lenght.tex
@@ -1,10 +1,10 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 11 16:06:12 2015
+% Mon Jun  1 17:32:09 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & HEF PreID & HEF GeoID & NoAssis & All \\ 
+ & HEF PreID & HEF GeoID & No Assist & All \\ 
   \hline
 Health\_Centre & 1.32 & 1.40 & 1.37 & 1.38 \\ 
   District\_Hospital & 1.32 & 1.35 & 1.26 & 1.32 \\ 
