--- a/tex/Q2_Inpatiant_Care_Counts.tex
+++ b/tex/Q2_Inpatiant_Care_Counts.tex
@@ -1,16 +1,16 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Sun May 17 08:04:48 2015
+% Mon Jun  1 17:32:09 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & PreID & GeoID & NoAssist & All \\ 
+ & HEF PreID & HEF GeoID & No Assist & All \\ 
   \hline
-Health\_Centre & 855 & 944 & 836 & 2635 \\ 
-  District\_Hospital & 357 & 454 & 396 & 1207 \\ 
-  Provincial\_Hospital & 326 &  47 & 534 & 907 \\ 
-  National\_Hospital &   3 &   0 &  15 &  18 \\ 
-  Private\_Clinic &  59 &  60 & 277 & 396 \\ 
+Health\_Centre &  28 &  83 &  57 & 168 \\ 
+  District\_Hospital &  81 & 191 &  66 & 338 \\ 
+  Provincial\_Hospital &  83 &  29 & 131 & 243 \\ 
+  National\_Hospital &   1 &   0 &   6 &   7 \\ 
+  Private\_Clinic &   0 &   3 &   4 &   7 \\ 
    \hline
 \end{tabular}
 \caption{Number of inpatient care events by Group and Facility} 
