--- a/tex/Q2_Outpatient_NumServices_Used.tex
+++ b/tex/Q2_Outpatient_NumServices_Used.tex
@@ -1,10 +1,10 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 12 11:20:22 2015
+% Mon Jun  1 17:32:10 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & HEF PreID & HEF GeoID & NoAssis & All \\ 
+ & HEF PreID & HEF GeoID & No Assist & All \\ 
   \hline
 No Care &  63 & 293 &  47 & 403 \\ 
   1 & 1003 & 1478 & 1547 & 4028 \\ 
