--- a/tex/Q2_Outpatient_service_utilitzation_rates.tex
+++ b/tex/Q2_Outpatient_service_utilitzation_rates.tex
@@ -1,27 +1,28 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 11 16:06:12 2015
+% Mon Jun  1 17:32:09 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & HEF PreID & HEF GeoID & NoAssis & All \\ 
+ & HEF PreID & HEF GeoID & No Assist & All \\ 
   \hline
-Care\_At\_No\_care & 3.8\% & 12.8\% & 1.8\% & 6.1\% \\ 
-  Care\_At\_Homemade\_medicine & 0.5\% & 2.3\% & 0.3\% & 1.1\% \\ 
-  Care\_At\_Village\_modern\_medical\_practitioner & 0.1\% & 0.2\% & 0.0\% & 0.1\% \\ 
-  Care\_At\_Village\_health\_volunteer & 4.7\% & 8.4\% & 2.8\% & 5.2\% \\ 
-  Care\_At\_Traditional\_healer & 0.8\% & 1.8\% & 0.9\% & 1.2\% \\ 
-  Care\_At\_Health\_centre & 51.3\% & 41.2\% & 32.2\% & 40.2\% \\ 
-  Care\_At\_District\_hospital & 21.4\% & 19.8\% & 15.2\% & 18.4\% \\ 
-  Care\_At\_Provincial\_hospital/Regional & 19.7\% & 2.1\% & 20.6\% & 13.9\% \\ 
-  Care\_At\_National\_hospital & 0.2\% & 0.0\% & 0.6\% & 0.3\% \\ 
-  Care\_At\_Private\_pharmacy & 18.3\% & 10.8\% & 29.4\% & 20.1\% \\ 
-  Care\_At\_Private\_clinic & 3.7\% & 2.9\% & 11.4\% & 6.5\% \\ 
-  Care\_At\_Abroad & 0.0\% & 0.3\% & 0.5\% & 0.3\% \\ 
-  Care\_At\_Illegal\_medical\_practitioner & 0.1\% & 0.5\% & 0.1\% & 0.2\% \\ 
-  Care\_At\_Other & 0.4\% & 0.1\% & 0.4\% & 0.3\% \\ 
-  Care\_At\_Military\_Hospital & 0.3\% & 0.1\% & 0.2\% & 0.2\% \\ 
-  Care\_At\_Religious\_Healer & 0.1\% & 0.0\% & 0.2\% & 0.1\% \\ 
+Not\_Sick & 8.2\% & 10.4\% & 13.3\% & 11.0\% \\ 
+  No Care & 3.8\% & 12.8\% & 1.8\% & 6.1\% \\ 
+  Health centre & 51.3\% & 41.2\% & 32.2\% & 40.2\% \\ 
+  Private pharmacy & 18.3\% & 10.8\% & 29.4\% & 20.1\% \\ 
+  District hospital & 21.4\% & 19.8\% & 15.2\% & 18.4\% \\ 
+  Provincial hospital & 19.7\% & 2.1\% & 20.6\% & 13.9\% \\ 
+  Private clinic & 3.7\% & 2.9\% & 11.4\% & 6.5\% \\ 
+  Village health volunteer & 4.7\% & 8.4\% & 2.8\% & 5.2\% \\ 
+  Traditional healer & 0.8\% & 1.8\% & 0.9\% & 1.2\% \\ 
+  Homemade medicine & 0.5\% & 2.3\% & 0.3\% & 1.1\% \\ 
+  National hospital & 0.2\% & 0.0\% & 0.6\% & 0.3\% \\ 
+  Care received abroad & 0.0\% & 0.3\% & 0.5\% & 0.3\% \\ 
+  Unlicensed medical practitioner & 0.1\% & 0.5\% & 0.1\% & 0.2\% \\ 
+  Military hospital & 0.3\% & 0.1\% & 0.2\% & 0.2\% \\ 
+  Religious healer & 0.1\% & 0.0\% & 0.2\% & 0.1\% \\ 
+  Village modern medical practitioner & 0.1\% & 0.2\% & 0.0\% & 0.1\% \\ 
+  Total\_Care\_Events & 133.1\% & 113.7\% & 129.4\% & 124.8\% \\ 
    \hline
 \end{tabular}
 \caption{Percent of group utilizing services} 
