--- a/tex/Q2_Outpatient_usage_distribution.tex
+++ b/tex/Q2_Outpatient_usage_distribution.tex
@@ -1,27 +1,27 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 11 16:06:12 2015
+% Mon Jun  1 17:32:09 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & HEF PreID & HEF GeoID & NoAssis & All \\ 
+ & HEF PreID & HEF GeoID & No Assist & All \\ 
   \hline
-Care\_At\_No\_care & 3.0\% & 12.4\% & 1.6\% & 5.4\% \\ 
-  Care\_At\_Homemade\_medicine & 0.4\% & 2.2\% & 0.3\% & 0.9\% \\ 
-  Care\_At\_Village\_modern\_medical\_practitioner & 0.0\% & 0.2\% & 0.0\% & 0.1\% \\ 
-  Care\_At\_Village\_health\_volunteer & 3.8\% & 8.2\% & 2.4\% & 4.6\% \\ 
-  Care\_At\_Traditional\_healer & 0.6\% & 1.8\% & 0.8\% & 1.0\% \\ 
-  Care\_At\_Health\_centre & 40.9\% & 39.9\% & 27.6\% & 35.2\% \\ 
-  Care\_At\_District\_hospital & 17.1\% & 19.2\% & 13.1\% & 16.1\% \\ 
-  Care\_At\_Provincial\_hospital/Regional & 15.7\% & 2.0\% & 17.7\% & 12.2\% \\ 
-  Care\_At\_National\_hospital & 0.1\% & 0.0\% & 0.5\% & 0.2\% \\ 
-  Care\_At\_Private\_pharmacy & 14.6\% & 10.5\% & 25.2\% & 17.6\% \\ 
-  Care\_At\_Private\_clinic & 3.0\% & 2.8\% & 9.8\% & 5.7\% \\ 
-  Care\_At\_Abroad & 0.0\% & 0.3\% & 0.4\% & 0.2\% \\ 
-  Care\_At\_Illegal\_medical\_practitioner & 0.0\% & 0.5\% & 0.1\% & 0.2\% \\ 
-  Care\_At\_Other & 0.3\% & 0.1\% & 0.3\% & 0.3\% \\ 
-  Care\_At\_Military\_Hospital & 0.2\% & 0.1\% & 0.1\% & 0.1\% \\ 
-  Care\_At\_Religious\_Healer & 0.1\% & 0.0\% & 0.2\% & 0.1\% \\ 
+Village modern medical practitioner & 0.0\% & 0.2\% & 0.0\% & 0.1\% \\ 
+  Religious healer & 0.1\% & 0.0\% & 0.2\% & 0.1\% \\ 
+  Military hospital & 0.2\% & 0.1\% & 0.1\% & 0.1\% \\ 
+  Unlicensed medical practitioner & 0.0\% & 0.4\% & 0.1\% & 0.2\% \\ 
+  National hospital & 0.1\% & 0.0\% & 0.4\% & 0.2\% \\ 
+  Care received abroad & 0.0\% & 0.2\% & 0.4\% & 0.2\% \\ 
+  Homemade medicine & 0.4\% & 2.0\% & 0.2\% & 0.9\% \\ 
+  Traditional healer & 0.6\% & 1.6\% & 0.7\% & 1.0\% \\ 
+  Village health volunteer & 3.6\% & 7.4\% & 2.1\% & 4.2\% \\ 
+  No Care & 2.8\% & 11.3\% & 1.4\% & 4.9\% \\ 
+  Private clinic & 2.8\% & 2.5\% & 8.8\% & 5.2\% \\ 
+  Not\_Sick & 6.1\% & 9.2\% & 10.3\% & 8.8\% \\ 
+  Provincial hospital & 14.8\% & 1.8\% & 15.9\% & 11.1\% \\ 
+  District hospital & 16.1\% & 17.4\% & 11.8\% & 14.7\% \\ 
+  Private pharmacy & 13.7\% & 9.5\% & 22.7\% & 16.1\% \\ 
+  Health centre & 38.5\% & 36.3\% & 24.9\% & 32.2\% \\ 
    \hline
 \end{tabular}
 \caption{Percent of outpatient services by service type within each group} 
