--- a/tex/Q4_16_BirthFacility.tex
+++ b/tex/Q4_16_BirthFacility.tex
@@ -1,16 +1,17 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Wed May 20 15:09:41 2015
+% Mon Jun  1 14:25:02 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & PreID & GeoID & NoAssist & All \\ 
+ & PreID & GeoID & No Assist & All \\ 
   \hline
-Private Hospital & 26.8\% & 3.1\% & 35.3\% & 27.4\% \\ 
-  District Hospital & 19.5\% & 12.5\% & 27.5\% & 22.9\% \\ 
-  Heath Clinic & 4.9\% & 18.8\% & 8.8\% & 9.7\% \\ 
-  Private clinic & 48.8\% & 62.5\% & 27.5\% & 38.9\% \\ 
-  Home & 0.0\% & 3.1\% & 1.0\% & 1.1\% \\ 
+Private Hospital & NaN\% & NaN\% & NaN\% & NaN\% \\ 
+  District Hospital & NaN\% & NaN\% & NaN\% & NaN\% \\ 
+  Heath Clinic & NaN\% & NaN\% & NaN\% & NaN\% \\ 
+  Private clinic & NaN\% & NaN\% & NaN\% & NaN\% \\ 
+  Home & NaN\% & NaN\% & NaN\% & NaN\% \\ 
+  Other & NaN\% & NaN\% & NaN\% & NaN\% \\ 
    \hline
 \end{tabular}
 \caption{Reported Delivery Facility Type} 
