--- a/tex/EthnicMakeup.tex
+++ b/tex/EthnicMakeup.tex
@@ -1,24 +1,23 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Wed May 27 13:25:32 2015
+% Mon Jun  1 14:07:42 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllllll}
   \hline
- & PreID & V2 & GeoID & V4 & No Assist & V6 & All & V8 \\ 
+ & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 \\ 
   \hline
-Lao & 28 & 10.3\% & 1 & 0.4\% & 107 & 27.4\% & 136 & 14.6\% \\ 
-  Alak & 59 & 21.8\% & 8 & 3.0\% & 69 & 17.7\% & 136 & 14.6\% \\ 
-  Katu & 45 & 16.6\% & 52 & 19.3\% & 62 & 15.9\% & 159 & 17.1\% \\ 
-  Trieng & 40 & 14.8\% & 150 & 55.8\% & 55 & 14.1\% & 245 & 26.3\% \\ 
-  Hmong & 0 & 0.0\% & 0 & 0.0\% & 1 & 0.3\% & 1 & 0.1\% \\ 
-  Yru & 10 & 3.7\% & 0 & 0.0\% & 27 & 6.9\% & 37 & 4.0\% \\ 
-  Taoey & 13 & 4.8\% & 0 & 0.0\% & 11 & 2.8\% & 24 & 2.6\% \\ 
-  Yae & 9 & 3.3\% & 14 & 5.2\% & 9 & 2.3\% & 32 & 3.4\% \\ 
-  Brao & 0 & 0.0\% & 0 & 0.0\% & 1 & 0.3\% & 1 & 0.1\% \\ 
-  Krieng & 64 & 23.6\% & 44 & 16.4\% & 39 & 10.0\% & 147 & 15.8\% \\ 
-  Xuay & 2 & 0.7\% & 0 & 0.0\% & 9 & 2.3\% & 11 & 1.2\% \\ 
-  Lav & 1 & 0.4\% & 0 & 0.0\% & 0 & 0.0\% & 1 & 0.1\% \\ 
-  Total & 271 & 100.0\% & 269 & 100.0\% & 390 & 100.0\% & 930 & 100.0\% \\ 
+Lao & 0 & NA\% & 0 & NA\% & 0 & NA\% & 136 & 14.6\% \\ 
+  Alak & 0 & NA\% & 0 & NA\% & 0 & NA\% & 136 & 14.6\% \\ 
+  Katu & 0 & NA\% & 0 & NA\% & 0 & NA\% & 159 & 17.1\% \\ 
+  Trieng & 0 & NA\% & 0 & NA\% & 0 & NA\% & 245 & 26.3\% \\ 
+  Hmong & 0 & NA\% & 0 & NA\% & 0 & NA\% & 1 & 0.1\% \\ 
+  Yru & 0 & NA\% & 0 & NA\% & 0 & NA\% & 37 & 4.0\% \\ 
+  Taoey & 0 & NA\% & 0 & NA\% & 0 & NA\% & 24 & 2.6\% \\ 
+  Yae & 0 & NA\% & 0 & NA\% & 0 & NA\% & 32 & 3.4\% \\ 
+  Brao & 0 & NA\% & 0 & NA\% & 0 & NA\% & 1 & 0.1\% \\ 
+  Krieng & 0 & NA\% & 0 & NA\% & 0 & NA\% & 147 & 15.8\% \\ 
+  Xuay & 0 & NA\% & 0 & NA\% & 0 & NA\% & 11 & 1.2\% \\ 
+  Lav & 0 & NA\% & 0 & NA\% & 0 & NA\% & 1 & 0.1\% \\ 
    \hline
 \end{tabular}
 \caption{Ethnic Distribution of Sampled Households} 
