--- a/tex/Q2_Inpatiant_Care_PercentByCenter.tex
+++ b/tex/Q2_Inpatiant_Care_PercentByCenter.tex
@@ -1,10 +1,10 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 11 16:06:12 2015
+% Mon Jun  1 17:32:09 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
- & HEF PreID & HEF GeoID & NoAssis & All \\ 
+ & HEF PreID & HEF GeoID & No Assist & All \\ 
   \hline
 Health\_Centre & 14.5\% & 27.1\% & 21.6\% & 22.0\% \\ 
   District\_Hospital & 42.0\% & 62.4\% & 25.0\% & 44.3\% \\ 
