--- a/UsageAnalysis.rmd
+++ b/UsageAnalysis.rmd
@@ -1,3 +1,13 @@
+---
+title: "Usage Analysis"
+date: "02/06/2015"
+output:
+    html_document:
+        toc: true
+        toc_depth: 4
+        number_sections: true
+---
+
 #Usage Analysis
 
 
